--- a/css/app.css
+++ b/css/app.css
@@ -1150,14 +1150,17 @@ h2,
       -ms-flex-pack: center;
           justify-content: center;
   margin: 0 10px;
-  transition: background-color .3s ease;
+  transition: all .3s ease;
   position: relative;
   overflow: hidden;
 }
+.social__item:hover{
+  border: none;
+}
 .social__item::before{
   content: "";
-  width: 100%;
-  height: 100%;
+  width: calc(100% + 2px);
+  height: calc(100% + 2px);
   position: absolute;
   top: 50%;
   left: 50%;
@@ -1166,6 +1169,7 @@ h2,
   opacity: 0;
   transition: all .3s ease;
 }
+
 .social__item_vk::before {
   background: #4D76A1;
 }
