--- a/ibs/app/sass/base.sass
+++ b/ibs/app/sass/base.sass
@@ -16,6 +16,8 @@
     --menu-font:                400 0.7778rem 'Manrope', sans-serif
     --communication-font:       600 0.7778rem 'Manrope', sans-serif
     --banner-font:              700 3.8889rem 'Manrope', sans-serif
+    --input-label-font:         400 0.625rem 'Manrope', sans-serif
+    --checkbox-label-font:      400 0.7rem 'Manrope', sans-serif
     @media (max-width: 1023px)
         --banner-font:              700 3rem 'Manrope', sans-serif
     @media (max-width: 767px)
