--- a/ibs/app/sass/blocks/communication.sass
+++ b/ibs/app/sass/blocks/communication.sass
@@ -10,6 +10,7 @@
     &__call-order
         position: relative
         cursor: pointer
+        color: var(--second-accent-color)
         &::before
             content: ""
             width: 100%
