--- a/ibs/app/sass/main.sass
+++ b/ibs/app/sass/main.sass
@@ -2,6 +2,7 @@
 @import base
 @import blocks/wrapper
 @import blocks/link
+@import blocks/button
 @import blocks/menu
 @import blocks/communication
 @import blocks/heading
@@ -14,6 +15,7 @@
 @import blocks/tabs
 @import blocks/advantages
 @import blocks/news
+@import blocks/form
 @import blocks/footer
 @import blocks/contacts
 @import blocks/akticom
