--- a/basistech/css/app.css
+++ b/basistech/css/app.css
@@ -190,11 +190,13 @@ td, th {
   --main-text-color: #1C2A60;
   --main-bg-color: #F1F3F8;
   --advantages-bg-color: #E2E5EB;
+  --popup-bg-color: #F1F3F8;
   --footer-bg-color: #1C2A60;
   --main-accent-color: #0196F0;
   --second-accent-color: #FFFFFF;
   --third-accent-color: #0178C0;
   --border-color: #E2E5EB;
+  --label-hover-color: #858C9B;
   --gradient: linear-gradient(0deg, rgba(0, 0, 0, .2), rgba(0, 0, 0, 0.2)), #0196F0;
   --base-font-family: "Rostelecom Basis", sans-serif;
   --base-font-size: 16px;
@@ -203,6 +205,7 @@ td, th {
   --border-radius-tag: 20px;
   --border-radius-labels: 18px;
   --border-radius-select: 16px;
+  --border-radius-input: 16px;
   --border-radius-btn: 12px;
   --transition-duration: .15s;
   --transition-function: ease-in;
@@ -562,7 +565,9 @@ b {
 
 .custom-select-panel {
   padding: 4px;
-  margin-top: 20px;
+  -webkit-transform: translateY(-61px);
+      -ms-transform: translateY(-61px);
+          transform: translateY(-61px);
   background: var(--second-accent-color);
   border: 1px solid var(--border-color);
   border-radius: var(--border-radius-select);
@@ -578,6 +583,20 @@ b {
   padding: 16px;
   line-height: 100%;
   cursor: pointer;
+  position: relative;
+}
+.custom-select-option:first-child::before {
+  content: "";
+  width: 14px;
+  height: 9px;
+  background: url("data:image/svg+xml,%3Csvg width='14' height='9' viewBox='0 0 14 9' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M6.99998 6.01791L1.85881 0.87674L0.540955 2.1946L6.99998 8.65363L13.459 2.1946L12.1411 0.87674L6.99998 6.01791Z' fill='%23858C9B'/%3E%3C/svg%3E%0A");
+  background-repeat: no-repeat;
+  position: absolute;
+  top: 50%;
+  right: 16px;
+  -webkit-transform: translateY(-50%) rotate(180deg);
+      -ms-transform: translateY(-50%) rotate(180deg);
+          transform: translateY(-50%) rotate(180deg);
 }
 
 .custom-select-option.has-focus {
@@ -590,6 +609,148 @@ b {
 
 .custom-select-container.is-open .custom-select-panel {
   max-height: 1000px;
+}
+
+.overlay {
+  position: fixed;
+  z-index: 999;
+  top: 0;
+  right: 0;
+  left: 0;
+  bottom: 0;
+  background: #000;
+  visibility: hidden;
+  opacity: 0;
+  -webkit-transition-property: opacity, visibility;
+  -o-transition-property: opacity, visibility;
+  transition-property: opacity, visibility;
+  -webkit-transition-duration: var(--transition-duration);
+       -o-transition-duration: var(--transition-duration);
+          transition-duration: var(--transition-duration);
+  -webkit-transition-timing-function: var(--transition-function);
+       -o-transition-timing-function: var(--transition-function);
+          transition-timing-function: var(--transition-function);
+  cursor: pointer;
+}
+.overlay_active {
+  visibility: visible;
+  opacity: 0.6;
+  height: 100vh;
+  width: 100vw;
+}
+
+.popup {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  margin: auto;
+  -webkit-transform: translate(-50%, -50%);
+      -ms-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  z-index: 1000;
+  padding: 0 20px;
+  width: calc(100% - 30px);
+  max-width: 600px;
+  background: var(--popup-bg-color);
+  border-radius: var(--border-radius);
+  padding: 32px 40px 40px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  overflow: auto;
+  max-height: calc(100vh - 30px);
+  visibility: hidden;
+  opacity: 0;
+  -webkit-transition-property: opacity, visibility;
+  -o-transition-property: opacity, visibility;
+  transition-property: opacity, visibility;
+  -webkit-transition-duration: var(--transition-duration);
+       -o-transition-duration: var(--transition-duration);
+          transition-duration: var(--transition-duration);
+  -webkit-transition-timing-function: var(--transition-function);
+       -o-transition-timing-function: var(--transition-function);
+          transition-timing-function: var(--transition-function);
+}
+.popup_active {
+  visibility: visible;
+  opacity: 1;
+}
+@media (max-width: 767px) {
+  .popup {
+    padding: 32px 20px 20px;
+  }
+}
+.popup__close {
+  width: 18px;
+  height: 18px;
+  background-image: url("data:image/svg+xml,%3Csvg width='18' height='18' viewBox='0 0 18 18' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M17 1L9 9.00001M9 9.00001L1 1M9 9.00001L17 17M9 9.00001L1 17' stroke='%231C2A60' stroke-width='2'/%3E%3C/svg%3E%0A");
+  position: absolute;
+  top: 44px;
+  right: 44px;
+  cursor: pointer;
+}
+@media (max-width: 767px) {
+  .popup__close {
+    top: 32px;
+    right: 32px;
+  }
+}
+
+.form__title {
+  margin-bottom: 20px;
+}
+.form__block {
+  margin-bottom: 16px;
+  position: relative;
+}
+.form__input, .form__textarea {
+  background: var(--second-accent-color);
+  border: 1px solid var(--border-color);
+  border-radius: var(--border-radius-input);
+  height: 60px;
+  width: 100%;
+  padding: 31px 20px 8px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  outline: none;
+  -webkit-transition-property: border;
+  -o-transition-property: border;
+  transition-property: border;
+  -webkit-transition-duration: var(--transition-duration);
+       -o-transition-duration: var(--transition-duration);
+          transition-duration: var(--transition-duration);
+  -webkit-transition-timing-function: var(--transition-function);
+       -o-transition-timing-function: var(--transition-function);
+          transition-timing-function: var(--transition-function);
+}
+.form__input:hover, .form__input:focus, .form__textarea:hover, .form__textarea:focus {
+  border-color: var(--main-accent-color);
+}
+.form__textarea {
+  height: 120px;
+}
+.form__label {
+  position: absolute;
+  top: 21px;
+  left: 21px;
+  z-index: 2;
+  cursor: text;
+  -webkit-transition-property: top;
+  -o-transition-property: top;
+  transition-property: top;
+  -webkit-transition-duration: var(--transition-duration);
+       -o-transition-duration: var(--transition-duration);
+          transition-duration: var(--transition-duration);
+  -webkit-transition-timing-function: var(--transition-function);
+       -o-transition-timing-function: var(--transition-function);
+          transition-timing-function: var(--transition-function);
+}
+.form__label_active {
+  font-size: 0.75rem;
+  top: 12px;
+  color: var(--label-hover-color);
+}
+.form__submit {
+  margin: 32px 0;
 }
 
 .banner {
@@ -746,6 +907,9 @@ b {
     margin-bottom: 40px;
   }
 }
+.title__text {
+  max-width: 700px;
+}
 @media (max-width: 767px) {
   .title__link {
     display: none;
@@ -770,6 +934,15 @@ b {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  -webkit-transition-property: border;
+  -o-transition-property: border;
+  transition-property: border;
+  -webkit-transition-duration: var(--transition-duration);
+       -o-transition-duration: var(--transition-duration);
+          transition-duration: var(--transition-duration);
+  -webkit-transition-timing-function: var(--transition-function);
+       -o-transition-timing-function: var(--transition-function);
+          transition-timing-function: var(--transition-function);
 }
 @media (max-width: 1023px) {
   .slider__item {
@@ -784,6 +957,9 @@ b {
             flex-direction: column;
     width: calc(100vw - 100px);
   }
+}
+.slider__item:hover {
+  border-color: var(--main-accent-color);
 }
 .slider__item-content {
   max-width: 400px;
@@ -1159,7 +1335,7 @@ b {
   margin-bottom: 60px;
 }
 .union__banner-text {
-  max-width: 600px;
+  max-width: 700px;
 }
 .union__companies {
   width: calc(31% - 24px);
@@ -1274,6 +1450,15 @@ b {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-transition-property: border;
+  -o-transition-property: border;
+  transition-property: border;
+  -webkit-transition-duration: var(--transition-duration);
+       -o-transition-duration: var(--transition-duration);
+          transition-duration: var(--transition-duration);
+  -webkit-transition-timing-function: var(--transition-function);
+       -o-transition-timing-function: var(--transition-function);
+          transition-timing-function: var(--transition-function);
 }
 @media (max-width: 1365px) {
   .products__item {
@@ -1291,6 +1476,9 @@ b {
         -ms-flex-align: center;
             align-items: center;
   }
+}
+.products__item:hover {
+  border-color: var(--main-accent-color);
 }
 .products__item-image {
   margin: 0 23px 0 0;
@@ -1374,7 +1562,7 @@ b {
 }
 
 .partners {
-  margin: 120px 0;
+  margin: 120px 0 200px;
 }
 @media (max-width: 1023px) {
   .partners {
@@ -1396,7 +1584,7 @@ b {
 @media (max-width: 767px) {
   .partners__item {
     max-width: 120px;
-    margin-bottom: 0;
+    margin-bottom: 120;
   }
   .partners__item img {
     width: 100%;
@@ -1424,6 +1612,15 @@ b {
   padding: 16px 16px 28px;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
+  -webkit-transition-property: border;
+  -o-transition-property: border;
+  transition-property: border;
+  -webkit-transition-duration: var(--transition-duration);
+       -o-transition-duration: var(--transition-duration);
+          transition-duration: var(--transition-duration);
+  -webkit-transition-timing-function: var(--transition-function);
+       -o-transition-timing-function: var(--transition-function);
+          transition-timing-function: var(--transition-function);
 }
 @media (max-width: 1023px) {
   .news__item {
@@ -1434,6 +1631,9 @@ b {
   .news__item {
     width: calc(100vw - 75px);
   }
+}
+.news__item:hover {
+  border-color: var(--main-accent-color);
 }
 .news__item-img {
   width: 100%;
