--- a/msi-new/css/style.css
+++ b/msi-new/css/style.css
@@ -54,6 +54,7 @@ body {
     padding: 0;
     margin: 0;
     background: #020104 url(../images/bg.webp);
+    background-size: cover;
     color: #fff;
     text-transform: uppercase;
 }
@@ -65,6 +66,10 @@ body {
 img {
     width: 100%;
     height: auto;
+}
+.overflow{
+    max-width: 100vw;
+    overflow-x: hidden;
 }
 .wrapper {
     max-width: 2370px;
@@ -291,13 +296,14 @@ img {
     opacity: 0;
     transition: opacity 0.3s ease-in;
     margin-bottom: 0;
+    display: none;
 }
 .room.-active{
     visibility: visible;
-    height: auto;
+    height: 100%;
     opacity: 1;
-    transition: all 0.2s ease-in;
     margin-bottom: 139px;
+    display: block;
 }
 
 .video {
