--- a/msi-new/css/style.css
+++ b/msi-new/css/style.css
@@ -53,7 +53,7 @@ body {
     font-weight: 400;
     padding: 0;
     margin: 0;
-    background: #020104 url(../images/bg.webp);
+    background: #020104 url(../images/bg-new.webp);
     background-size: cover;
     color: #fff;
     text-transform: uppercase;
@@ -131,6 +131,7 @@ img {
 
 .filter__item-main{
     width: 50%;
+    max-width: 600px;
     display: flex;
     justify-content: center;
     transition: all 0.2s ease-in;
@@ -259,6 +260,10 @@ img {
     height: 215px;
     margin-bottom: 34px;
     text-align: center;
+}
+.filter__tech-item-image img{
+    width: auto;
+    height: 100%;
 }
 .filter__tech-item-title {
     font-size: 26px;
