--- a/msi-new/css/style.css
+++ b/msi-new/css/style.css
@@ -72,17 +72,17 @@ img {
     overflow-x: hidden;
 }
 .wrapper {
-    max-width: 2370px;
+    max-width: 1600px;
     margin: 0 auto;
     padding: 0 15px;
 }
 .title {
     /* text-shadow: 0 0 9px #703dd5; */
     /* text-shadow: 4px 3px 10px #703dd5; */
-    font-size: 60px;
+    font-size: 40px;
     text-transform: uppercase;
     text-align: center;
-    margin-bottom: 69px;
+    margin-bottom: 50px;
     text-shadow: 0 0 10px #703dd4, 0 0 20px #703dd4, 0 0 30px #703dd4, 0 0 40px #703dd4
 }
 
@@ -173,10 +173,10 @@ img {
 }
 .filter__item-main span{
     display: inline-block;
-    font-size: 48px;
+    font-size: 30px;
     text-align: center;
     letter-spacing: 0.47px;
-    padding: 40px 60px;
+    padding: 30px 50px;
     background: #703dd5;
     width: fit-content;
     cursor: pointer;
@@ -193,9 +193,9 @@ img {
     box-shadow: 0 0 74px 5px rgba(112, 61, 213, 0.5);
 }
 .filter__retry {
-    margin: 25px;
-    width: 75px;
-    height: 75px;
+    margin: 23px;
+    width: 50px;
+    height: 50px;
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='32' height='32'%3E%3Cpath d='M16 2A14 14 0 0 0 2 16a14 14 0 0 0 14 14 14 14 0 0 0 10-4l-2.75-3A10 10 0 0 1 16 26 10 10 0 0 1 6 16 10 10 0 0 1 16 6a10 10 0 0 1 7.25 3L19 13h11V2l-4 4a14 14 0 0 0-10-4' fill='%23fff'/%3E%3C/svg%3E");
     background-size: contain;
     position: absolute;
@@ -207,10 +207,10 @@ img {
 @media (max-width: 767px) {
     .filter__retry {
         margin-right: 45px;
-        width: 40px;
-        height: 40px;
+        width: 30px;
+        height: 30px;
         right: -90px;
-        top: -20px;
+        top: -15px;
     }
 }
 .filter__retry.-active {
@@ -240,14 +240,13 @@ img {
     }
 }
 .filter__item{
-    width: calc(25% - 50px);
+    width: calc(25% - 40px);
     padding: 20px;
-    font-size: 26px;
+    font-size: 24px;
     background: #1e1845;
     color: #3e2a67;
-    font-size: 26px;
     text-align: center;
-    margin: 0 25px 53px;
+    margin: 0 20px 40px;
     box-sizing: border-box;
     cursor: pointer;
     transition: all 0.3s ease;
@@ -348,6 +347,8 @@ img {
     height: 215px;
     margin-bottom: 34px;
     text-align: center;
+    display: flex;
+    justify-content: center;
 }
 .filter__tech-item-image img{
     width: auto;
