--- a/sortmet/sass/blocks/catalog-btn.sass
+++ b/sortmet/sass/blocks/catalog-btn.sass
@@ -14,3 +14,6 @@
         top: 50%
         left: 20px
         transform: translateY(-50%)
+    &_active
+        &::before
+            background-image: url("data:image/svg+xml,%3Csvg width='24' height='24' viewBox='0 0 24 24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M5.63599 5.63599L18.3639 18.3639' stroke='white' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'/%3E%3Cpath d='M5.63623 18.364L18.3642 5.63609' stroke='white' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E%0A")
