--- a/sortmet/sass/blocks/labels.sass
+++ b/sortmet/sass/blocks/labels.sass
@@ -10,5 +10,11 @@
         font-size: 14px
         line-height: 16px
         border-radius: 7px
+        width: fit-content
+        height: fit-content
+        @media (max-width: 767px)
+            font-size: 12px
+            line-height: 14px
+            padding: 3px 10px
         &_accent
             color: #FF1469
