--- a/sortmet/sass/blocks/phone.sass
+++ b/sortmet/sass/blocks/phone.sass
@@ -5,5 +5,5 @@
         display: inline-block
         margin-bottom: 5px
     &__caption
-        color: #0F68CE
+        color: #626D7D
         font-size: .875rem
