--- a/sortmet/sass/blocks/adress.sass
+++ b/sortmet/sass/blocks/adress.sass
@@ -4,6 +4,10 @@
         margin-bottom: 15px
     &__value
         margin-bottom: 24px
+    &__maps
+        @media (max-width: 767px)
+            display: flex
+            margin: 0 -5px
     &__map
         display: flex
         align-items: center
@@ -14,5 +18,8 @@
         margin-bottom: 10px
         color: #1A1E24
         font-weight: 600
+        @media (max-width: 767px)
+            width: calc( 50% - 10px )
+            margin: 0 5px
         &-caption
             margin-left: 10px
