--- a/sortmet/sass/blocks/card.sass
+++ b/sortmet/sass/blocks/card.sass
@@ -3,19 +3,37 @@
     &__image
         position: relative
         margin-bottom: 20px
+        @media (max-width: 767px)
+            margin-bottom: 10px
+        img
+            width: 100%
+            height: auto
     &__labels
         position: absolute
         left: 20px
         bottom: 10px
+        @media (max-width: 767px)
+            left: 10px
+            bottom: initial
+            top: 10px
+            height: calc(100% - 13px)
+            display: flex
+            justify-content: space-between
+            flex-direction: column-reverse
     &__content
     &__price
         display: flex
         align-items: center
         margin-bottom: 10px
+        @media (max-width: 767px)
+            margin-bottom: 5px
         &-current
             font-weight: 600
             font-size: 24px
             line-height: 28px
+            @media (max-width: 767px)
+                font-size: 14px
+                line-height: 16px
         &-old
             margin-left: 22px
             font-weight: 400
@@ -23,9 +41,18 @@
             line-height: 21px
             text-decoration-line: line-through
             color: #7F8A9B
+            @media (max-width: 767px)
+                font-size: 12px
+                line-height: 14px
     &__name
         line-height: 150%
-        margin-bottom: 9px
+        margin-bottom: 10px
+        height: 48px
+        overflow: hidden
+        @media (max-width: 767px)
+            height: 30px
+            font-size: 12px
+            line-height: 130%
     &__block
         display: flex
         justify-content: space-between
@@ -33,6 +60,8 @@
         margin-top: 11px
     &__actions
         margin-right: 10px
+        @media (max-width: 767px)
+            display: none
     &__buy
         position: absolute
         top: 100%
@@ -41,6 +70,12 @@
         cursor: pointer
         opacity: 0
         transition: .5s all ease
+        @media (max-width: 767px)
+            display: none
     &:hover
         .card__buy
             opacity: 1
+    &__mobile-actions
+        display: none
+        @media (max-width: 767px)
+            display: flex
