--- a/sortmet/sass/blocks/catalog-slider.sass
+++ b/sortmet/sass/blocks/catalog-slider.sass
@@ -1,6 +1,8 @@
 .catalog-slider
     position: relative
-    margin-bottom: 70px
+    margin: 60px 0 70px
+    @media (max-width: 767px)
+        margin: 40px 0
     &__inner
         position: relative
       
