--- a/sortmet/sass/blocks/characteristics.sass
+++ b/sortmet/sass/blocks/characteristics.sass
@@ -6,5 +6,12 @@
             width: 120px
             margin-right: 20px
             color: #7F8A9B
+            @media (max-width: 767px)
+                width: 90px
+                font-size: 12px
+                line-height: 14px
         &-value
             white-space: nowrap
+            @media (max-width: 767px)
+                font-size: 12px
+                line-height: 14px
