--- a/sortmet/sass/blocks/email.sass
+++ b/sortmet/sass/blocks/email.sass
@@ -1,6 +1,6 @@
 .email
     &__value
-        color: #1A1E24
+        color: #0F68CE
         font-weight: 800
         display: inline-block
         margin-bottom: 5px
