--- a/sortmet/sass/blocks/header.sass
+++ b/sortmet/sass/blocks/header.sass
@@ -2,31 +2,55 @@
     position: relative
     z-index: 2
     background: #fff
+    margin-bottom: 32px
+    @media (max-width: 1023px)
+        border-bottom: 1px solid #DEE1E5
+        margin-bottom: 10px
+        position: fixed
+        top: 0
+        left: 0
+        z-index: 11
+        width: 100% 
     &__top
         display: flex
         justify-content: space-between
         align-items: center
         padding: 10px 0
-        margin: 0 -15px
+        margin: 0 -10px
+        @media (max-width: 1023px)
+            display: none
         & > *
-            margin: 0 15px
+            margin: 0 10px
     &__middle
         display: flex
         justify-content: space-between
         align-items: center
         padding: 14px 0 15px
-        margin: 0 -15px
+        margin: 0 -10px
         & > *
-            margin: 0 15px
+            margin: 0 10px
     &__bottom
         display: flex
         justify-content: space-between
         align-items: center
-        padding: 11px 0 32px
+        padding: 11px 0 0
         position: relative
+        @media (max-width: 1023px)
+            display: none
     &__location
         max-width: 225px
+        @media (max-width: 1214px)
+            display: none
     &__catalog-btn
         margin-right: 16px
     &__search
         margin-right: 43px
+    &__phones,
+    &__email,
+    &__social
+        @media (max-width: 1023px)
+            display: none
+    &__hamburger
+        display: none
+        @media (max-width: 1023px)
+            display: block
