--- a/sortmet/sass/blocks/menu.sass
+++ b/sortmet/sass/blocks/menu.sass
@@ -1,5 +1,9 @@
 .menu
     margin: 0 -15px
+    @media (max-width: 1214px)
+        margin: 0 -10px
     &__item
         color: #626D7D
         padding: 0 15px
+        @media (max-width: 1214px)
+            padding: 0 10px
