--- a/sortmet/sass/blocks/reviews.sass
+++ b/sortmet/sass/blocks/reviews.sass
@@ -1,6 +1,8 @@
 .reviews
     margin: 70px 0
     position: relative
+    @media (max-width: 767px)
+        margin: 40px 0 
     &__list
         position: relative
     &__item
@@ -13,6 +15,8 @@
         flex-direction: column
         justify-content: space-between
         transition: .3s all ease
+        @media (max-width: 767px)
+            padding: 20px
         &:hover
             box-shadow: 0px 3px 20px -9px rgba(0, 0, 0, 0.1), 0px 16px 26px rgba(0, 0, 0, 0.1), 0px 16px 5px -10px rgba(0, 0, 0, 0.03)
         &-top
@@ -24,9 +28,15 @@
             font-size: 18px
             line-height: 21px
             color: #1A1E24
+            @media (max-width: 767px)
+                font-size: 16px
+                line-height: 18px
         &-text
             line-height: 160%
             margin-bottom: 20px
+            @media (max-width: 767px)
+                font-size: 14px
+                margin-bottom: 15px
         &-link
             color: #0F68CE
             padding: 5px 36px 7px 15px
@@ -36,6 +46,8 @@
             width: fit-content
             position: relative
             transition: .3s all ease
+            @media (max-width: 767px)
+                font-size: 14px
             &::before
                 content: ""
                 width: 16px
