--- a/sortmet/sass/blocks/search.sass
+++ b/sortmet/sass/blocks/search.sass
@@ -8,6 +8,7 @@
         border: 2px solid #0077FF
         border-radius: 7px
         width: 100%
+        padding-left: 28px
     &__btn
         width: 70px
         padding: 0
