--- a/sortmet/sass/blocks/seo.sass
+++ b/sortmet/sass/blocks/seo.sass
@@ -1,12 +1,39 @@
 .seo
     margin: 50px 0 70px
     line-height: 160%
+    @media (max-width: 767px)
+        margin: 40px 0
+    &__content
+        max-height: 176px
+        overflow: hidden
+        position: relative
+        transition: .3s height ease
+        @media (max-width: 767px)
+            font-size: 14px
+            line-height: 160%
+        &::before
+            content: ""
+            width: 100%
+            height: 100%
+            position: absolute
+            top: 0
+            left: 0
+            background: linear-gradient(180deg, rgba(26, 30, 36, 0) 0%, #ffffff 100%)
+            transition: .3s background ease
+        &_open
+            max-height: 100%
+            &::before
+                background: transparent
     &__controller
         color: #0077FF
         font-weight: 600
         padding-right: 34px
         position: relative
         width: fit-content
+        cursor: pointer
+        @media (max-width: 767px)
+            font-size: 14px
+            line-height: 16px
         &::before
             content: ""
             width: 24px
@@ -15,4 +42,8 @@
             position: absolute
             top: 50%
             right: 0
-            transform: translateY(-50%)
+            transform: translateY(-50%) rotate(180deg)
+        &_active
+            &::before
+                transform: translateY(-50%)
+
