--- a/sortmet/sass/blocks/services.sass
+++ b/sortmet/sass/blocks/services.sass
@@ -1,18 +1,25 @@
 .services
     margin: 70px 0 50px
+    @media (max-width: 767px)
+        margin: 40px 0
     &__list
-        display: flex
-        flex-wrap: wrap
-        margin: 0 -10px
+        // display: flex
+        // flex-wrap: wrap
+        // margin: 0 -10px
+        overflow: initial
     &__item
         position: relative
-        width: calc( 25% - 20px )
-        margin: 0 10px 20px
+        // width: calc( 25% - 20px )
+        // margin: 0 10px 20px
         cursor: pointer
         overflow: hidden
+        @media (max-width: 1023px)
+            width: 190px
+            height: 180px
+            border-radius: 15px
         &-image
             width: 100%
-            height: auto
+            height: 100%
             object-fit: cover
         &-caption
             position: absolute
@@ -24,6 +31,9 @@
             line-height: 21px
             color: #FFFFFF
             z-index: 1
+            @media (max-width: 1023px)
+                font-size: 14px
+                line-height: 16px
         &::before
             opacity: 0
             transition: .3s opacity ease
@@ -40,3 +50,5 @@
                 opacity: 0.8
                 border-radius: 15px
                 z-index: 0
+                @media (max-width: 1023px)
+                    height: 100%
