--- a/sortmet/sass/blocks/title.sass
+++ b/sortmet/sass/blocks/title.sass
@@ -3,6 +3,9 @@
     font-size: 1.625rem
     line-height: 30px
     margin-bottom: 20px
+    @media (max-width: 767px)
+        font-size: 22px
+        line-height: 29px
     &__text
         padding-bottom: 20px
         font-size: 16px
