--- a/sortmet/sass/main.sass
+++ b/sortmet/sass/main.sass
@@ -10,12 +10,14 @@
 @import blocks/phone
 @import blocks/email
 @import blocks/location
+@import blocks/hamburger-icon
 @import blocks/social
 @import blocks/catalog-btn
 @import blocks/catalog-menu
 @import blocks/search
 @import blocks/navbar
 @import blocks/tags
+@import blocks/select
 @import blocks/header
 @import blocks/banners
 @import blocks/banner
@@ -25,6 +27,7 @@
 @import blocks/labels
 @import blocks/characteristics
 @import blocks/actions
+@import blocks/mobile-actions
 @import blocks/card
 @import blocks/arrow
 @import blocks/catalog-slider
@@ -45,5 +48,8 @@
 @import blocks/menu-block
 @import blocks/adress
 @import blocks/footer
+@import blocks/hamburger
+@import blocks/hamburger-menu
+@import blocks/mobile-navbar
 @import blocks/overlay
 
