--- a/sortmet/sass/main/base.sass
+++ b/sortmet/sass/main/base.sass
@@ -4,10 +4,14 @@ body
     line-height: 18px
     font-weight: 400
     color: #1A1E24
+    @media (max-width: 1023px)
+        padding-top: 84px
 a
     text-decoration: none
     color: #0F68CE
 
+p
+    margin: 0 0 1em
 ul
     margin: 25px 0
     padding: 0
@@ -28,24 +32,31 @@ ul
             left: 7px
 
 .wrapper
-    max-width: 1216px
+    max-width: 1235px
     width: 100%
     margin: 0 auto
-    padding: 0 15px
+    padding: 0 10px
+    box-sizing: border-box
+.overflow
+    width: 100vw
+    overflow: hidden
 
+// @media (min-width: 1024px) 
 .gray
-    padding-top: 60px
+    // padding-top: 60px
     position: relative
-    &::before
-        content: ""
-        width: 100%
-        height: 542px
-        border-radius: 25px 25px 0 0
-        position: absolute
-        top: 0
-        left: 0
-        background: linear-gradient(180deg, #F7F7F9 0%, rgba(247, 247, 249, 0) 100%)
-        z-index: -1
+    @media (min-width: 1024px) 
+        padding-top: 60px
+        &::before
+            content: ""
+            width: 100%
+            height: 542px
+            border-radius: 25px 25px 0 0
+            position: absolute
+            top: 0
+            left: 0
+            background: linear-gradient(180deg, #F7F7F9 0%, rgba(247, 247, 249, 0) 100%)
+            z-index: -1
     &::after
         content: ""
         width: 100%
