--- a/sortmet/sass/blocks/btn.sass
+++ b/sortmet/sass/blocks/btn.sass
@@ -2,9 +2,12 @@
     background: #0077FF
     padding: 15px 25px
     color: #fff
-    font-weight: 600
+    // font-weight: 600
     border-radius: 8px
     cursor: pointer
+    &-second
+        background: #DEE9FF
+        color: #0077FF
     &-buy
         background: #0077FF
         border-radius: 7px
