--- a/sortmet/sass/blocks/header.sass
+++ b/sortmet/sass/blocks/header.sass
@@ -2,7 +2,7 @@
     position: relative
     z-index: 2
     background: #fff
-    margin-bottom: 32px
+    margin-bottom: 27px
     @media (max-width: 1023px)
         border-bottom: 1px solid #DEE1E5
         margin-bottom: 10px
@@ -15,7 +15,7 @@
         display: flex
         justify-content: space-between
         align-items: center
-        padding: 10px 0
+        padding: 10px 0 13px
         margin: 0 -10px
         @media (max-width: 1023px)
             display: none
@@ -25,7 +25,8 @@
         display: flex
         justify-content: space-between
         align-items: center
-        padding: 14px 0 15px
+        // padding: 14px 0 15px
+        padding: 14px 0 6px
         margin: 0 -10px
         & > *
             margin: 0 10px
@@ -33,7 +34,7 @@
         display: flex
         justify-content: space-between
         align-items: center
-        padding: 11px 0 0
+        padding: 14px 0 0
         position: relative
         @media (max-width: 1023px)
             display: none
