--- a/sortmet/sass/blocks/menu.sass
+++ b/sortmet/sass/blocks/menu.sass
@@ -1,7 +1,8 @@
 .menu
-    margin: 0 -15px
-    @media (max-width: 1214px)
-        margin: 0 -10px
+    &__inner
+        margin: 0 -15px
+        @media (max-width: 1214px)
+            margin: 0 -10px
     &__item
         color: #626D7D
         padding: 0 15px
