--- a/sortmet/sass/blocks/about-us.sass
+++ b/sortmet/sass/blocks/about-us.sass
@@ -68,6 +68,7 @@
             &-description
                 color: #626D7D
                 font-size: 16px
+                line-height: 18px
                 @media (max-width: 767px) 
                     font-size: 12px
                     line-height: 14px
