--- a/sortmet/sass/blocks/catalog-slider.sass
+++ b/sortmet/sass/blocks/catalog-slider.sass
@@ -11,3 +11,9 @@
     padding-bottom: 100px
 .catalog-slider__inner .arrow
     top: calc( 27% )
+    @media (max-width: 1365px)
+        display: none
+.catalog-slider__inner .pagination
+    display: none
+    @media (max-width: 1365px)
+        display: flex
