--- a/sortmet/sass/blocks/reviews.sass
+++ b/sortmet/sass/blocks/reviews.sass
@@ -64,5 +64,12 @@
                 &::before
                     background-image: url("data:image/svg+xml,%3Csvg width='16' height='16' viewBox='0 0 16 16' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cg clip-path='url(%23clip0_215_6287)'%3E%3Cpath d='M6.66667 11.3335L10 8.00016L6.66667 4.66683' stroke='%23ffffff' stroke-width='1.33333' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/g%3E%3Cdefs%3E%3CclipPath id='clip0_215_6287'%3E%3Crect width='16' height='16' fill='white' transform='translate(0 16) rotate(-90)'/%3E%3C/clipPath%3E%3C/defs%3E%3C/svg%3E%0A")
 .reviews__list .swiper
-    margin: -70px
-    padding: 70px
+    margin: -70px -20px
+    padding: 70px 20px
+.reviews__list .arrow
+    @media (max-width: 1365px)
+        display: none
+.reviews__list .pagination
+    display: none
+    @media (max-width: 1365px)
+        display: flex
