--- a/sortmet/sass/blocks/search.sass
+++ b/sortmet/sass/blocks/search.sass
@@ -3,11 +3,11 @@
     border-radius: 7px
     width: 100%
     display: flex
-    height: 40px
+    height: 46px
     &__input
         border: 2px solid #0077FF
         border-radius: 7px
-        width: 100%
+        width: calc(100% - 105px)
         padding-left: 28px
     &__btn
         width: 70px
