--- a/sortmet/sass/main.sass
+++ b/sortmet/sass/main.sass
@@ -30,6 +30,7 @@
 @import blocks/mobile-actions
 @import blocks/card
 @import blocks/arrow
+@import blocks/pagination
 @import blocks/catalog-slider
 @import blocks/advantages
 @import blocks/services
@@ -52,4 +53,4 @@
 @import blocks/hamburger-menu
 @import blocks/mobile-navbar
 @import blocks/overlay
-
+@import blocks/city-changer
