--- a/sortmet/sass/blocks/faq.sass
+++ b/sortmet/sass/blocks/faq.sass
@@ -51,6 +51,7 @@
     &__question
         font-weight: 600
         line-height: 150%
+        margin-bottom: 10px
         @media (max-width: 767px)
             font-weight: 400
             font-size: 14px
