--- a/sortmet/sass/blocks/menu-block.sass
+++ b/sortmet/sass/blocks/menu-block.sass
@@ -8,3 +8,6 @@
         margin-bottom: 15px
         color: #626D7D
         white-space: nowrap
+        transition: .3s color ease
+        &:hover
+          color: #0F68CE  
