--- a/sortmet/sass/blocks/tags.sass
+++ b/sortmet/sass/blocks/tags.sass
@@ -19,7 +19,7 @@
             font-size: 14px
         &_active
             color: #0F68CE
-            border-color: #0077FF
+            border-color: #0F68CE
         &:hover
             background: #0077FF
             border-color: #0077FF
