--- a/sortmet/sass/blocks/card.sass
+++ b/sortmet/sass/blocks/card.sass
@@ -48,7 +48,11 @@
         line-height: 150%
         margin-bottom: 10px
         height: 48px
+        color: #1A1E24
         overflow: hidden
+        transition: .3s color ease
+        &:hover
+            color: #0F68CE
         @media (max-width: 767px)
             height: 30px
             font-size: 12px
