--- a/sortmet/sass/blocks/menu.sass
+++ b/sortmet/sass/blocks/menu.sass
@@ -6,5 +6,8 @@
     &__item
         color: #626D7D
         padding: 0 15px
+        transition: .3s color ease
+        &:hover
+          color: #0F68CE  
         @media (max-width: 1214px)
             padding: 0 10px
