--- a/sortmet/sass/main.sass
+++ b/sortmet/sass/main.sass
@@ -35,7 +35,7 @@
 @import blocks/advantages
 @import blocks/services
 @import blocks/how-buy
-@import blocks/suppliers
+@import blocks/partners
 @import blocks/news
 @import blocks/reviews
 @import blocks/rating
