--- a/sortmet/sass/blocks/btn.sass
+++ b/sortmet/sass/blocks/btn.sass
@@ -8,6 +8,11 @@
     &-second
         background: #DEE9FF
         color: #0077FF
+    &-third
+        background: #1A1E24
+        padding: 20px 30px
+        font-size: 18px
+        line-height: 21px
     &-buy
         background: #0077FF
         border-radius: 7px
