--- a/sortmet/sass/blocks/card.sass
+++ b/sortmet/sass/blocks/card.sass
@@ -74,6 +74,8 @@
         cursor: pointer
         opacity: 0
         transition: .5s all ease
+        z-index: 1
+
         @media (max-width: 1023px)
             display: none
     &:hover
