--- a/sortmet/sass/blocks/catalog-slider.sass
+++ b/sortmet/sass/blocks/catalog-slider.sass
@@ -13,7 +13,7 @@
     top: calc( 27% )
     @media (max-width: 1365px)
         display: none
-.catalog-slider__inner .pagination
+.catalog-slider__inner .slider-pagination
     display: none
     @media (max-width: 1365px)
         display: flex
