--- a/sortmet/sass/blocks/reviews.sass
+++ b/sortmet/sass/blocks/reviews.sass
@@ -69,7 +69,7 @@
 .reviews__list .arrow
     @media (max-width: 1365px)
         display: none
-.reviews__list .pagination
+.reviews__list .slider-pagination
     display: none
     @media (max-width: 1365px)
         display: flex
