--- a/sortmet/sass/main.sass
+++ b/sortmet/sass/main.sass
@@ -2,6 +2,7 @@
 @import main/fonts
 @import main/vars
 @import main/base
+@import blocks/heading
 @import blocks/title
 @import blocks/btn
 @import blocks/city
@@ -17,6 +18,7 @@
 @import blocks/search
 @import blocks/navbar
 @import blocks/tags
+@import blocks/tags-second
 @import blocks/select
 @import blocks/header
 @import blocks/banners
@@ -30,7 +32,7 @@
 @import blocks/mobile-actions
 @import blocks/card
 @import blocks/arrow
-@import blocks/pagination
+@import blocks/slider-pagination
 @import blocks/catalog-slider
 @import blocks/advantages
 @import blocks/services
@@ -54,3 +56,18 @@
 @import blocks/mobile-navbar
 @import blocks/overlay
 @import blocks/city-changer
+@import blocks/breadcrumbs
+@import blocks/count
+@import blocks/sections
+@import blocks/catalog-section
+@import blocks/pagination
+@import blocks/table
+@import blocks/regions
+@import blocks/estimate-banner
+@import blocks/filter
+@import blocks/checkbox
+@import blocks/radio
+@import blocks/prompt
+@import blocks/range
+@import blocks/sort
+@import blocks/view
