--- a/sortmet/sass/main/base.sass
+++ b/sortmet/sass/main/base.sass
@@ -30,7 +30,20 @@ ul
             position: absolute
             top: 7px
             left: 7px
+h1
+    font-weight: 800
+    font-size: 36px
+    line-height: 41px
 
+input[type='text']
+    width: 100%
+    height: 48px
+    padding: 14px 15px 16px
+    border: 1px solid #DEE1E5
+    border-radius: 7px
+    box-sizing: border-box
+    &::placeholder
+        color: #7F8A9B
 .wrapper
     max-width: 1235px
     width: 100%
@@ -66,5 +79,6 @@ ul
         left: 0
         background: linear-gradient(180deg, rgba(247, 247, 249, 0) 0%, #F7F7F9 100%)
         z-index: -1
-
-
+    &_nb
+        &::after
+            content: none
