--- a/sortmet/sass/blocks/search.sass
+++ b/sortmet/sass/blocks/search.sass
@@ -5,7 +5,8 @@
     display: flex
     height: 46px
     &__input
-        border: 2px solid #0077FF
+        border: 2px solid #0077FF !important
+        height: auto !important
         border-radius: 7px
         width: calc(100% - 105px)
         padding-left: 28px
