--- a/sortmet/sass/blocks/table.sass
+++ b/sortmet/sass/blocks/table.sass
@@ -1,8 +1,9 @@
-table
+.table
     text-align: left
     border-top: 1px solid #DEE1E5
     border-radius: 7px
     width: 100%
+    min-width: 768px
     tr
         &:nth-child(even)
             background: #F7F7F9
