--- a/sortmet/sass/blocks/catalog-section.sass
+++ b/sortmet/sass/blocks/catalog-section.sass
@@ -2,21 +2,38 @@
     margin: 30px 0 100px
     &__inner
         display: flex
+        margin: 0 -10px
     &__filter
         width: 25%
         padding: 0 10px
         box-sizing: border-box
+        @media (max-width: 1023px)
+            display: none
     &__list
         width: 75%
         padding: 0 10px
+        @media (max-width: 1023px)
+            width: calc( 100% - 20px )
+
         &-inner
             box-sizing: border-box
             display: flex
             flex-wrap: wrap
             margin: 0 -10px
+
     &__item
         width: calc( 33.33333% - 20px )
         margin: 0 10px 30px
+        @media (max-width: 767px)
+            width: calc( 50% - 20px )
+        &-line_hide-mob
+            @media (max-width: 767px)
+                display: none !important
+        &_show-mob
+            display: none
+            @media (max-width: 767px)
+                display: block
+        
     &__banner
         display: flex
         align-items: center
@@ -24,10 +41,13 @@
         padding: 0 42px 0 28px
         width: calc( 100% - 20px )
         background: #454545
+        box-sizing: border-box
         border-radius: 15px
         color: #fff
-        margin-bottom: 40px
+        margin: 0 auto 40px
         position: relative
+        @media (max-width: 1023px)
+            display: none
         &::before
             content: ""
             width: 321px
@@ -40,7 +60,35 @@
             font-size: 18px
             font-weight: 800
             line-height: 140%
+    &__banner-mob
+        display: none
+        box-sizing: border-box
+        width: calc( 100% - 20px )
+        margin: 0 auto 30px
+        @media (max-width: 1023px)
+            display: flex
+            
     &__actions
         display: flex
         justify-content: space-between
+        align-items: center
         margin-bottom: 30px
+        flex-wrap: wrap
+        .sort
+            padding-right: 15px
+            @media (max-width: 1023px)
+                order: 2
+    &__view
+        @media (max-width: 1023px)
+            order: 1
+            width: 100%
+            .view__count
+                margin: 0 0 15px
+        .view__list
+            @media (max-width: 1023px)
+                display: none
+    &__filter-icon
+        display: none
+        order: 3
+        @media (max-width: 1023px)
+            display: block
