--- a/sortmet/sass/blocks/labels.sass
+++ b/sortmet/sass/blocks/labels.sass
@@ -18,3 +18,5 @@
             padding: 3px 10px
         &_accent
             color: #FF1469
+        &_border
+            border: 1px solid #DEE1E5
