--- a/sortmet/sass/blocks/pagination.sass
+++ b/sortmet/sass/blocks/pagination.sass
@@ -1,11 +1,20 @@
 .pagination
-    margin: 60px 0 
+    margin: 60px 0 0
+    @media (max-width: 1023px)
+        margin-top: 10px
     &__item
         padding: 12.5px 18px
         font-size: 20px
         line-height: 23px
         color: #7F8A9B
         display: inline-block
+        @media (max-width: 1023px)
+            padding: 9px 13px
+            font-size: 16px
+            line-height: 18px
+        &_mob-hide
+            @media (max-width: 1023px)
+                display: none
         &_active
             background: #0077FF
             border-radius: 7px
@@ -21,3 +30,4 @@
         background: #E7F2FF
         border-radius: 7px
         color: #0077FF
+        font-weight: 600
