--- a/sortmet/sass/main.sass
+++ b/sortmet/sass/main.sass
@@ -31,6 +31,7 @@
 @import blocks/actions
 @import blocks/mobile-actions
 @import blocks/card
+@import blocks/card-line
 @import blocks/arrow
 @import blocks/slider-pagination
 @import blocks/catalog-slider
@@ -71,3 +72,5 @@
 @import blocks/range
 @import blocks/sort
 @import blocks/view
+@import blocks/filters
+@import blocks/filter-icon
