--- a/sortmet/sass/blocks/advantages.sass
+++ b/sortmet/sass/blocks/advantages.sass
@@ -41,6 +41,7 @@
                 margin: 10px 0 5px
         &-text
             color: #626D7D
+            line-height: 150%
             transition: .3s color ease
             @media (max-width: 1023px)
                 font-size: 12px
