--- a/sortmet/sass/blocks/catalog-section.sass
+++ b/sortmet/sass/blocks/catalog-section.sass
@@ -92,3 +92,13 @@
         order: 3
         @media (max-width: 1023px)
             display: block
+    &__tags-second
+        .tags-second__slider
+            @media (max-width: 767px)
+                display: none
+        .tags-second__show
+            display: none
+            @media (max-width: 767px)
+                display: block
+
+        
