--- a/sortmet/sass/blocks/filter.sass
+++ b/sortmet/sass/blocks/filter.sass
@@ -46,3 +46,7 @@
         &-show-more
             color: #0077FF
             cursor: pointer
+    &__btn
+        margin-bottom: 10px
+        text-align: center
+        // display: block
