--- a/sortmet/sass/blocks/tags-second.sass
+++ b/sortmet/sass/blocks/tags-second.sass
@@ -28,10 +28,10 @@
         padding: 10px 15px 12px
         color: #626D7D
     &__slider
-        @media (max-width: 767px)
-        display: none
+        // @media (max-width: 767px)
+        // display: none
     &__show
-        display: none
+        // display: none
         padding-right: 34px
         font-size: 14px
         font-weight: 600
