--- a/sortmet/sass/blocks/title.sass
+++ b/sortmet/sass/blocks/title.sass
@@ -3,6 +3,10 @@
     font-size: 1.625rem
     line-height: 30px
     margin-bottom: 20px
+    &_mb
+        margin-bottom: 40px
+        @media (max-width: 767px)
+            margin-bottom: 20px
     @media (max-width: 767px)
         font-size: 22px
         line-height: 29px
