--- a/sortmet/sass/blocks/card-line.sass
+++ b/sortmet/sass/blocks/card-line.sass
@@ -4,6 +4,7 @@
     justify-content: space-between
     padding-bottom: 30px
     border-bottom: 1px solid #DEE1E5
+    width: 100%
     &:last-child
         // margin-bottom: 0
         padding-bottom: 0
@@ -26,6 +27,7 @@
         display: flex
         justify-content: space-betwee
         padding-right: 58px
+        width: 100%
     &__name
         font-size: 18px
         line-height: 150%
@@ -66,4 +68,19 @@
         line-height: 21px
         text-decoration: line-through
         color: #7F8A9B
-    
+    &__avaliable
+        margin: 15px 0
+        padding-left: 34px
+        font-size: 16px
+        line-height: 18px
+        color: #626D7D
+        position: relative
+        &::before
+            content: ''
+            width: 24px
+            height: 24px
+            background-image: url("data:image/svg+xml,%3Csvg width='24' height='24' viewBox='0 0 24 24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cg clip-path='url(%23clip0_536_8233)'%3E%3Cpath d='M20 7L10 17L5 12' stroke='%231BC100' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/g%3E%3Cdefs%3E%3CclipPath id='clip0_536_8233'%3E%3Crect width='24' height='24' rx='5' fill='white'/%3E%3C/clipPath%3E%3C/defs%3E%3C/svg%3E%0A")
+            position: absolute
+            top: 50%
+            left: 0
+            transform: translateY(-50%)
