--- a/sortmet/sass/blocks/card.sass
+++ b/sortmet/sass/blocks/card.sass
@@ -47,6 +47,7 @@
     &__name
         line-height: 150%
         margin-bottom: 10px
+        display: block
         height: 48px
         color: #1A1E24
         overflow: hidden
