--- a/sortmet/sass/blocks/filters.sass
+++ b/sortmet/sass/blocks/filters.sass
@@ -1,7 +1,7 @@
 .filters
     display: flex
     flex-wrap: wrap 
-    margin: 0 -5px 30px
+    margin: -10px -5px 30px
     &__item
         margin: 0 5px 10px
         padding: 10px 43px 12px 20px
