--- a/sortmet/sass/blocks/form.sass
+++ b/sortmet/sass/blocks/form.sass
@@ -53,7 +53,7 @@
     &__input
         max-width: 278px
         width: 100%
-        height: 62px
+        height: 62px !important
         background: #FFFFFF
         border-radius: 7px
         border: none
