--- a/sortmet/sass/blocks/pagination.sass
+++ b/sortmet/sass/blocks/pagination.sass
@@ -3,10 +3,11 @@
     @media (max-width: 1023px)
         margin-top: 10px
     &__item
-        padding: 12.5px 18px
+        padding: 12px 18px
         font-size: 20px
         line-height: 23px
         color: #7F8A9B
+        margin: 0 -2px
         display: inline-block
         @media (max-width: 1023px)
             padding: 9px 13px
