--- a/sortmet/sass/blocks/card-line.sass
+++ b/sortmet/sass/blocks/card-line.sass
@@ -27,7 +27,7 @@
         display: flex
         justify-content: space-betwee
         padding-right: 58px
-        width: 100%
+        width: calc(100% - 548px)
     &__name
         font-size: 18px
         line-height: 150%
@@ -52,6 +52,7 @@
         flex-direction: column
         justify-content: space-between
         white-space: nowrap
+        width: 230px
         &-inner
             display: flex
         &-price
