--- a/sortmet/sass/blocks/sections.sass
+++ b/sortmet/sass/blocks/sections.sass
@@ -13,6 +13,9 @@
         box-sizing: border-box
         display: flex
         align-items: center
+        transition: .3s all ease
+        &:hover
+            background: #E7F2FF
         @media (max-width: 1023px)
             width: calc( 50% - 10px )
         @media (max-width: 767px)
