--- a/sortmet/sass/blocks/tags-second.sass
+++ b/sortmet/sass/blocks/tags-second.sass
@@ -27,6 +27,10 @@
         border-radius: 7px
         padding: 10px 15px 12px
         color: #626D7D
+        transition: .3s all ease
+        &:hover
+            background: #E7F2FF
+            color: #1A1E24
     &__slider
         // @media (max-width: 767px)
         // display: none
