--- a/sortmet/sass/blocks/card.sass
+++ b/sortmet/sass/blocks/card.sass
@@ -1,5 +1,19 @@
 .card
     position: relative
+    @media (min-width: 1023px)
+        &:hover
+            z-index: 1
+            &::before
+                content: ""
+                width: calc( 100% + 40px )
+                height: calc(100% + 100px)
+                background: #FFF
+                box-shadow: 0px 162px 65px rgba(0, 0, 0, 0.01), 0px 91px 55px rgba(0, 0, 0, 0.03), 0px 40px 40px rgba(0, 0, 0, 0.05), 0px 10px 22px rgba(0, 0, 0, 0.06), 0px 0px 0px rgba(0, 0, 0, 0.06)
+                border-radius: 15px
+                position: absolute
+                top: -20px
+                left: 50%
+                transform: translateX( -50%)
     &__image
         position: relative
         margin-bottom: 20px
@@ -21,6 +35,8 @@
             justify-content: space-between
             flex-direction: column-reverse
     &__content
+        position: relative
+        z-index: 2
     &__price
         display: flex
         align-items: center
