--- a/sortmet/sass/blocks/labels.sass
+++ b/sortmet/sass/blocks/labels.sass
@@ -12,6 +12,7 @@
         border-radius: 7px
         width: fit-content
         height: fit-content
+        white-space: nowrap
         @media (max-width: 767px)
             font-size: 12px
             line-height: 14px
