--- a/sortmet/sass/blocks/catalog-element.sass
+++ b/sortmet/sass/blocks/catalog-element.sass
@@ -3,14 +3,33 @@
     &__top
         margin-bottom: 40px
         display: flex
+        @media screen and ( max-width: 767px)
+            flex-direction: column
     &__slider
         margin-right: 30px
-        max-width: 392px
+        // max-width: 392px
+        min-width: 392px
+        width: 40%
+        @media screen and ( max-width: 1023px)
+            margin-right: 15px
+        @media screen and ( max-width: 767px)
+            width: 100%
+            max-width: 100%
     &__content
-        width: calc( 100% - 422px )
+        // width: 60%
+        // max-width: calc( 100% - 422px )
+        width: fill-available
         display: flex
         justify-content: space-between
         align-items: flex-start
+        @media screen and ( max-width: 767px)
+            width: 100%
+        &-info
+            padding-right: 30px
+            // width: 66.6666%
+            box-sizing: border-box
+            @media screen and ( max-width: 1023px)
+                display: none
         &-heading
             font-size: 26px
             line-height: 30px
@@ -24,9 +43,18 @@
         &-reviews-count
             color: #0C67BD
         &-variants
-            margin-bottom: 23px !important
+            margin-bottom: 13px !important
+            // &_desc
+            //     @media screen and ( max-width: 1023px)
+            //         display: none !important
+            &_mob
+                display: none !important
+                @media screen and ( max-width: 1023px)
+                    display: flex !important
         &-characteristics
             margin-bottom: 25px
+            // @media screen and ( max-width: 1023px)
+            //     display: none
         &-question
             background: #E7F2FF
             border-radius: 7px
@@ -44,13 +72,23 @@
                 top: 50%
                 left: 15px
                 transform: translateY(-50%)
+        &-buy
+            @media screen and ( max-width: 1023px)
+                width: 100%
         &-buy-inner
             box-shadow: 0px 2px 34px -10px rgba(0, 0, 0, 0.07)
             border-radius: 15px
             padding: 30px 30px 20px
             margin-bottom: 20px
+            @media screen and ( max-width: 767px )
+                box-shadow: none
+                padding: 0
+        &-delivery-date
+            @media screen and ( max-width: 1023px )
+                justify-content: flex-start
         &-block
             display: flex
+            justify-content: space-between
         &-labels
             margin-bottom: 5px
         &-price
@@ -69,6 +107,8 @@
             position: relative
             top: -10px
             right: -10px
+            @media screen and ( max-width: 767px )
+                position: static
         &-avaliable
             margin: 15px 0
             padding-left: 34px
@@ -109,8 +149,12 @@
                 transform: translateY(-50%)
     &__navigation
         margin-bottom: 35px
+        @media (max-width: 1023px)
+            display: none !important
     &__desctiption
         margin-bottom: 60px
+        @media (max-width: 1023px)
+            margin-bottom: 30px
         &-inner
             display: flex
             align-items: flex-start
@@ -119,10 +163,17 @@
             padding-right: 20px
             box-sizing: border-box
             line-height: 160%
+            @media (max-width: 1023px)
+                width: 100%
+                padding-right: 0
+            @media (max-width: 767px)
+                font-size: 14px
         &-block
             width: 289px
             background: #F7F7F9
             border-radius: 15px
+            @media (max-width: 1023px)
+                display: none
     &__services
         padding: 20px
         &-title
@@ -144,9 +195,24 @@
     &__characteristics
         &-inner
             display: flex
-            gap: 20px
+            gap: 0 20px
+            flex-wrap: wrap
         &-block
-            width: 50%
+            width: calc(50% - 10px)
+            @media (max-width: 1023px)
+                width: 100%
+            .characteristics-second__item
+                @media (max-width:767px)
+                    padding-bottom: 10px
+            .characteristics-second__item-caption
+                @media (max-width:767px)
+                    width: 50%
+                    &::before
+                        content: none
             .characteristics-second__item-value
                 width: 100%
                 max-width: 284px
+                @media (max-width:767px)
+                    width: 50%
+                    &::before
+                        content: none
