--- a/sortmet/sass/blocks/characteristics-second.sass
+++ b/sortmet/sass/blocks/characteristics-second.sass
@@ -4,6 +4,9 @@
         justify-content: space-between
         margin-bottom: 12px
         position: relative
+        @media (max-width:767px)
+            font-size: 14px
+            line-height: 16px
         &::before
             content: ""
             width: 100%
