--- a/sortmet/sass/blocks/form.sass
+++ b/sortmet/sass/blocks/form.sass
@@ -63,7 +63,7 @@
         color: #1A1E24
         @media (max-width: 1023px)
             max-width: 100%
-            height: 48px
+            height: 48px !important
             padding: 15px
     &__button
         padding: 20px 30px
