--- a/sortmet/sass/blocks/payment.sass
+++ b/sortmet/sass/blocks/payment.sass
@@ -48,7 +48,7 @@
                 font-size: 12px
         &-icon
             @media (max-width: 1023px)
-                width: 24px
-                height: auto
+                width: auto
+                height: 24px
             &_hover
                 display: none
