--- a/sortmet/sass/blocks/unit.sass
+++ b/sortmet/sass/blocks/unit.sass
@@ -7,6 +7,7 @@
         width: 50%
         color: #7F8A9B
         padding: 8px 30px
+        text-align: center
         &_active
             color: #0C67BD
             background: #FFFFFF
