--- a/sortmet/sass/blocks/variants.sass
+++ b/sortmet/sass/blocks/variants.sass
@@ -1,5 +1,6 @@
 .variants
     display: flex
+    flex-wrap: wrap
     margin: 0 -5px
     &__item
         width: fit-content
@@ -7,7 +8,7 @@
         color: #626D7D
         border: 1px solid #DEE1E5
         border-radius: 7px
-        margin: 0 5px
+        margin: 0 5px 10px
         cursor: pointer
         &_active
             color: #0077FF
