--- a/sortmet/sass/main.sass
+++ b/sortmet/sass/main.sass
@@ -85,6 +85,8 @@
 @import blocks/delivery-date
 @import blocks/delivery
 @import blocks/reviews-second
+@import blocks/info-block
+@import blocks/sku
+@import blocks/line
 @import blocks/catalog-element
-
 @import blocks/navigation
