--- a/sortmet/sass/blocks/catalog-element.sass
+++ b/sortmet/sass/blocks/catalog-element.sass
@@ -1,7 +1,9 @@
 .catalog-element
-    margin: 30px 0 100px
+    margin: 20px 0 100px
+    @media screen and ( max-width: 767px)
+        margin: 0 0 100px
     &__top
-        margin-bottom: 40px
+        margin-bottom: 25px
         display: flex
         @media screen and ( max-width: 767px)
             flex-direction: column
@@ -15,6 +17,8 @@
         @media screen and ( max-width: 767px)
             width: 100%
             max-width: 100%
+            min-width: 100%
+            margin-bottom: 23px
     &__content
         // width: 60%
         // max-width: calc( 100% - 422px )
@@ -51,6 +55,13 @@
                 display: none !important
                 @media screen and ( max-width: 1023px)
                     display: flex !important
+                @media screen and ( max-width: 767px)
+                    order: -1
+                    flex-wrap: nowrap
+                    width: 100vw
+                    overflow: scroll
+                    white-space: nowrap
+                    margin-bottom: 18px
         &-characteristics
             margin-bottom: 25px
             // @media screen and ( max-width: 1023px)
@@ -83,6 +94,8 @@
             @media screen and ( max-width: 767px )
                 box-shadow: none
                 padding: 0
+                display: flex
+                flex-direction: column
         &-delivery-date
             @media screen and ( max-width: 1023px )
                 justify-content: flex-start
@@ -91,6 +104,16 @@
             justify-content: space-between
         &-labels
             margin-bottom: 5px
+            @media screen and ( max-width: 767px)
+                .labels__item
+                    font-size: 14px
+                    line-height: 16px
+                    padding: 5px 15px
+        &-prices
+            @media screen and ( max-width: 767px)
+                display: flex
+                align-items: center
+                gap: 20px
         &-price
             padding-right: 54px
         &-price-current
@@ -149,6 +172,9 @@
                 transform: translateY(-50%)
     &__navigation
         margin-bottom: 35px
+        // position: sticky
+        // top: 0
+        background: #FFF
         @media (max-width: 1023px)
             display: none !important
     &__desctiption
@@ -216,3 +242,30 @@
                     width: 50%
                     &::before
                         content: none
+    &__mobile-header
+        display: none
+        @media screen and ( max-width: 1023px)
+            display: block
+        &-heading
+            margin-bottom: 10px
+        &-reviews
+            display: flex
+            margin-bottom: 13px
+        &-rating
+            margin-right: 10px
+        &-count
+            color: #0C67BD
+        &-sku
+            margin-bottom: 13px
+    &__mobile-characteristics
+        display: none
+        margin: 30px 0 10px
+        @media screen and ( max-width: 767px)
+            display: block
+    &__mobile-services
+        padding: 20px
+        background: #F7F7F9
+        border-radius: 15px
+        display: none
+        @media screen and ( max-width: 767px)
+            display: block
