--- a/sortmet/sass/blocks/navigation.sass
+++ b/sortmet/sass/blocks/navigation.sass
@@ -1,10 +1,12 @@
 .navigation
     display: flex
     border-bottom: 1px solid #DEE1E5
+    background: #fff
     &__item
         margin: 0 60px 0 0
-        padding-bottom: 15px
+        padding: 15px 0
         color: #626D7D
+        cursor: pointer
         &_active
             color: #0077FF
             position: relative
