--- a/sortmet/sass/blocks/payment.sass
+++ b/sortmet/sass/blocks/payment.sass
@@ -1,7 +1,7 @@
 .payment
     margin: 70px 0
     @media (max-width: 1023px)
-        margin: 40px 0
+        margin: 30px 0
     &__list
         display: flex
         flex-wrap: wrap
@@ -47,6 +47,9 @@
             @media (max-width: 1023px)
                 font-size: 12px
         &-icon
+            img
+                width: auto
+                height: 100%
             @media (max-width: 1023px)
                 width: auto
                 height: 24px
